--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name =			iarduino Position BMX055 (положение в пространстве)
-version =		1.0.2
+version =		1.0.3
 author =		iarduino <shop@iarduino.ru>
 maintainer =	Панькин Павел <shop@iarduino.ru>
 sentence =		Библиотека для работы с Trema модулем IMU 9 DOF на базе чипа BMX055.
 paragraph =		Библиотека позволяет получать данные: акселерометра, гироскопа, магнитометра и определять положение модуля в пространстве: тангаж, крен, курс.
 category =		Sensors
 url =			http://iarduino.ru/file/337.html
-architectures =	avr
+architectures =	avr,esp8266,esp32
 includes =      iarduino_Position_BMX055.h
