--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
-name =			iarduino Position BMX055 (положение в пространстве)
-version =		1.2.0
+name =			iarduino_Position_BMX055
+version =		1.2.1
 author =		iarduino <shop@iarduino.ru>
 maintainer =	Панькин Павел <shop@iarduino.ru>
 sentence =		Библиотека для работы с Trema модулем IMU 9 DOF на базе чипа BMX055.
 paragraph =		Библиотека позволяет получать данные: акселерометра, гироскопа, магнитометра и определять положение модуля в пространстве: тангаж, крен, курс.
 category =		Sensors
 url =			http://iarduino.ru/file/337.html
-architectures =	avr,esp8266,esp32
+architectures =	avr,esp8266,esp32,mbed_rp2040,renesas_uno
 includes =      iarduino_Position_BMX055.h
