--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name =			iarduino_Position_BMX055
-version =		1.2.3
+version =		1.2.4
 author =		iarduino <shop@iarduino.ru>
-maintainer =	Панькин Павел <shop@iarduino.ru>
+maintainer =	iarduino <shop@iarduino.ru>
 sentence =		Библиотека для работы с Trema модулем IMU 9 DOF на базе чипа BMX055.
-paragraph =		Библиотека позволяет получать данные: акселерометра, гироскопа, магнитометра и определять положение модуля в пространстве: тангаж, крен, курс.
+paragraph =		Работает как с аппаратной, так и с программной шиной I2C. Позволяет получать данные: акселерометра, гироскопа, магнитометра и определять положение модуля в пространстве: тангаж, крен, курс.
 category =		Sensors
 url =			http://iarduino.ru/file/337.html
 architectures =	avr,esp8266,esp32,mbed_rp2040,renesas_uno
